k8s/qa/deployment_server.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sc-server-deployment
  namespace: qa-stablecog
  labels:
    app: sc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sc-server
  template:
    metadata:
      labels:
        app: sc-server
    spec:
      containers:
        - name: sc-server
          image: replaceme
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 13337
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 13337
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 13337
            initialDelaySeconds: 15
            periodSeconds: 10
          imagePullPolicy: "Always"
